add export functionality, edit relevant docs

--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -497,6 +497,35 @@ entries with invalid formats
 not cause import to crash.
 ** Cons: Higher coupling.
 
+=== Export feature
+==== Current Implementation
+The export contacts feature is facilitated by the new `Command`, `export`. It takes the current list of contacts in InsuRen 
+and exports it as a csv file, whose file name is given by the user and MUST end with .csv. The exported contact list will be
+saved in the root directory of the project. `export` implements the following operations:
+
+* `parse(String)` - parses the user's given file name String and checks if it is valid.
+* `populateFile(PrintWriter, Model)` - populates the (already initialized) file with data from the current Model.
+* `insertPersonIntoCsv(Person, PrintWriter) and cleanEntry(String)` - these two methods add contacts to the csv in the same
+order as they are displayed in InsuRen. Fields are cleaned by removing commas and brackets before being inserted in to the csv.
+
+Given below is an example usage scenario and how the export mechanism behaves at each step.
+
+Step 1. The user launches an application and there is either a list of existing contacts or the list is empty.
+
+Step 2. The user executes export command (x for shorthand), followed by FILE_NAME. If no file name is given or the file name 
+does not end with .csv, InsuRen throws an error message.
+
+Step 3. InsuRen fetches the current contact list, creates a new .csv file and copies all contacts into it.
+
+==== Design Considerations
+
+===== Aspect: How export executes
+
+* **Alternative 1 (current choice):** Read contacts from a ReadOnlyAddressBook:
+Export makes use of model.getAddressBook() and the getPersonList method within. 
+** Pros: Easy to implement. Since we are only dealing with a ReadOnlyAddressBook, the state of InsuRen will not be altered.
+** Cons: Only able to capture snapshots of the contact list. Not dynamically updated.
+
 // tag::addpicture[]
 === Add Picture feature
 ==== Current Implementation
