--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -283,7 +283,7 @@ image::import.png[width="790"]
 
 Example (user gives a file path):
 
-* `import` l/D:/AddressbookCorrect.csv
+* `import l/D:/AddressbookCorrect.csv`
 * Regardless which method is used, InsuRen will load contacts from the given csv file
 * Each contact in these files must have the name, phone number, email and address fields filled up in that order.
 * Any invalid entries will be ignored.
@@ -292,21 +292,23 @@ image::import-acceptable-csv.png[width="790"]
 +
 image::import-acceptable-csv2.png[width="790"]
 
-=== Mass export email addresses: `export` `[coming in v2.0]`
+=== Export contact list: `export`
 
-Exports all emails into a csv file in a directory that is given as the second argument. +
-Format: `export DESTINATION_DIRECTORY`
+Exports the current contact list into a csv file whose name is given as the second argument. The export file
+ can be found in the root directory of the project. +
+Format: `export DESTINATION_FILE_NAME.csv`
 
 ****
-* InsuRen will extract all email addresses, compile into a csv and save it in the given destination with default
-name AB4DDMMYY.csv
-* InsuRen will throw an error message if path is invalid.
+* InsuRen will copy all contacts and format them into a csv file, with each row representing a unique contact.
+* InsuRen will throw an error message if given file name is invalid (has no .csv suffix).
 ****
 
 Example:
 
-* `export C:\Users\John Doe\Documents` +
-Email addresses are exported to `C:\Users\John Doe\Documents\AB4DDMMYY.csv`
+* `export contactList28Nov.csv` +
+InsuRen contacts are exported to `contactList28Nov.csv`
++
+image::exportedCsv.png[width="790"]
 
 === Add meeting time: `schedule`
 
