--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -503,14 +503,15 @@ him from the `ServedPatientQueue`.
 // tag::document[]
 === Document
 ==== Current Implementation
-The `Document` `abstract class` represents all documents that can be issued by the clinic. The `Receipt`, `MedicalCertificate` and `ReferralLetter` classes all inherit from it. +
-It specifies what general information these documents should have and how they should be formatted. It can be thought of as a template for all its inheriting classes.
+The `Document`  class represents all documents that can be issued by the clinic. The `Receipt`, `MedicalCertificate` and `ReferralLetter` classes all inherit from it. +
+It specifies what general information these documents should have and how they should be formatted. It can be thought of as the formatting template for all the information
+belonging to its inheriting classes.
 
 ===== Implementation of `Receipt`
 The `Receipt` class structure is as follows:
 
 * has attributes of the `Served Patient` it is generated from, which includes the served patient's `name` and `IcNumber`.
-** These attributes are marked as `final` and cannot be changed.
+** These attributes are marked as `final` as they should not be changed.
 * contains all the `Medicine` and their associated `MedicineQuantity`.
 ** These are the medicines and their quantities respectively, prescribed by the doctor to the patient during his consultation.
 
@@ -539,7 +540,7 @@ image::ServedPatientListEmptyReceipt.png[width="650"]
 The `MedicalCertificate` class structure is as follows:
 
 * has attributes of the `Served Patient` it is generated from, which includes the served patient's `name` and `IcNumber`.
-** These attributes are marked as `final` and cannot be changed.
+** These attributes are marked as `final` as they should not be changed.
 * contains additional information like the `startDate` and `startDate` of their medical leave
 as well as the name of the issuing doctor `doctorName`.
 
@@ -582,16 +583,16 @@ Executing `refer` with an invalid index will **not** result in the generation of
 
 ==== Design Considerations
 ===== Aspect: Implementation of the Document
-* **Alternative 1 (current choice)**: Using an `abstract class` to implement `Document`. +
+* **Alternative 1 (current choice)**: Using a typical class to implement `Document`. +
 ** Pros:
 *** Allows all classes inheriting from `Document` to use a standardised method to format the relevant information that appears in every document that is issued by the clinic.
 ** Cons:
 *** `Java` does not support multiple inheritance; therefore, it prevents the classes that are inheriting from `Document` from inheriting from other useful classes or becoming an `enum`.
-*** Comparatively, `abstract classes` are more computationally expensive to use than `interfaces` due to overhead incurred looking up methods and various class members.
+*** Comparatively, `inheriting` from classes is more computationally expensive than using `interfaces` due to the overhead incurred looking up methods and various class members.
 * **Alternative 2**: Using an `interface` to implement `Document`.
 ** Pros:
 *** The classes implementing `Document` can be converted to `enums`, which ensures that the inputs fed to these classes are valid.
-**** For example, a person should not be issued a `Medical Certificate` excusing him from work/school for **1,000,000 days**!
+**** For example, an `enum` will prevent the issuing of a `Medical Certificate` that excuses a person from work/school for **1,000,000 days**!
 ** Cons:
 *** Unable to standardise the way the implementing classes implement the `generate` method.
 **** This can potentially allow the inheriting classes to omit certain fields that are relevant to the printing of a document, such as `date` and `time` of the consultation.
