--- a/README.adoc
+++ b/README.adoc
@@ -1,4 +1,6 @@
 = MeetingBook
+
+image:https://api.codacy.com/project/badge/Grade/547452079864465d9f0bcc1e96e9ebd3[link="https://app.codacy.com/app/ay1819s1w173/main?utm_source=github.com&utm_medium=referral&utm_content=CS2103-AY1819S1-W17-3/main&utm_campaign=Badge_Grade_Dashboard"]
 ifdef::env-github,env-browser[:relfileprefix: docs/]
 
 https://travis-ci.org/CS2103-AY1819S1-W17-3/main[image:https://travis-ci.org/CS2103-AY1819S1-W17-3/main.svg?branch=master[Build Status]]
