--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -266,11 +266,14 @@ The person should also be an existing member of the group.
 
 Display all existing persons on the person list display.
 
+// tag::import[]
 === Importing data : `import`
 
 User is able to import other data. +
 Format: `import <relative filepath>`
+// end::import[]
 
+// tag::export[]
 === Exporting data : `export`
 
 User is able to export data to store as backup elsewhere or send data to other users of MeetingBook. +
@@ -282,7 +285,9 @@ Format: +
 
 Example:
 `export f/backup.xml` : Export MeetingBook as `backup.xml`.
+// end::export[]
 
+// tag::filepath[]
 === Changing Storage Location: `filepath`
 
 Change the storage location of MeetingBook. +
@@ -295,6 +300,7 @@ Example:
 ****
 User can also check the current path of MeetingBook use `filepath show`
 ****
+// end::filepath[]
 
 === Saving the data
 
