--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -661,9 +661,6 @@ in each Command file.
 |===
 +
 
-//** *Pros:* Easy to implement
-//** *Cons:* Have to decide on each abbreviation subjectively which brings down performance if there are a lot of commands
-
 * *Alternative 2:* declare `COMMAND_ALIAS` using the first two characters of `COMMAND_WORD`
 in each Command file.
 +
@@ -672,9 +669,77 @@ in each Command file.
 |Pros| Better performance as abbreviations will be assigned systematically.
 |Cons| When there are 2 command words starting with same two characters e.g. `find` & `filter`, this does not work.
 |===
+
+=== Auto-complete Feature
+
+The auto-complete feature simplifies overcomplicated commands by prompting correct format.
+
+==== Overview
+
+The auto-complete mechanism is facilitated by `CommandBox`. It calls `autocomplete()`
+to `displayFormat()` if applicable command word is entered or to highlight the next
+parameter if full format is already provided in the command box.
+
+==== Example
+
+Given below is an example usage scenario and how the auto-complete mechanism behaves at
+each step.
+
+Step 1. The user launches the application for the first time.
+
+Step 2. The user enters `fi` in command box and then presses 'Tab' key. `autoComplete()`
+compares `input` through the list of applicable command words and abbreviations, and
+proceeds to `displayFormat()` because `fi` is an applicable `COMMAND_ALIAS`. It
+moves on to highlight its first placeholder, `DAY`, in the command line. As seen
+from the following diagrams.
+
+.After `fi` is entered.
+image::screenshot-fi.png[width="700", align="left"]
+
+.After first 'Tab' key is pressed.
+image::screenshot-fiFirstArgSelected.png[width="700", align="left"]
+
+Step 3. The user replaces `DAY` with an actual value, `SUN`, and presses 'Tab'
+key again. `autoComplete()` is called again, but because this time it checks that `input`
+`isFilterCommandFormat`, the next placeholder, `START_TIME`, is highlighted. Result
+is shown in the following diagram.
+
+.After second 'Tab' key is pressed.
+image::screenshot-fiSecondArgSelected.png[width="700", align="left"]
+
+Step 4. The user continues step 3 until all placeholders are filled up with actual
+values and then presses 'Enter' key to execute this command.
+
+.Activity Diagram for Auto Completion Mechanism.
+image::ActivityDiagram-autocompletion.png[width="700", align="left"]
+
+The _Activity Diagram_ above explains what happens when user presses 'Tab'.
+
+==== Design Considerations
+
+===== Aspect: TextInput
+
+* *Alternative 1:* (current choice): Continue to use the original TextField
 +
-//** *Pros*: Better performance as abbreviations will be assigned systematically.
-//** *Cons*: When there are 2 command words starting with same two characters e.g. `find` & `filter`, this does not work.
+[cols="1,10"]
+|===
+|Pros| External library enables bindAutocompletion for TextField (the drop down
+list of suggested commands that appears and updates itself as user types).
+External library enables bindAutocompletion for TextField (the drop down list of
+ suggested commands that appears and updates itself as user types).
+|Cons| Text formatting is limited. All text in the TextField must have the same format.
+|===
+
+* *Alternative 2:* Create additional TextField as user request for additional fields
++
+[cols="1,10"]
+|===
+|Pros| Allows for different formatting for different fields (Commands can have a
+ different colour from the fields)
+|Cons|Original structure will be disrupted. Command box will no longer be single
+line text input, which have consequences such as the user cannot backspace or
+select through the entire line.
+|===
 
 === Logging
 
