--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -73,10 +73,12 @@ Examples:
 * `addmodule mc/CS2103 mt/SOFTWARE ENGINEERING ay/AY1718 sem/1 t/gg` +
 * `addoccasion on/discussion od/2018-01-01 loc/SoC t/project t/gg`
 
+// tag::delete[]
 === Listing all persons : `list[]`
 
 Shows a list of all persons/modules/occasions in the address book. +
 Format: `list[]`
+// end::list[]
 
 === Editing a person : `edit[]`
 
@@ -119,6 +121,7 @@ Returns `john` and `John Doe`
 * `find n/Betsy n/Tim n/John` +
 Returns any person having names `Betsy`, `Tim`, or `John`
 
+// tag::delete[]
 === Deleting a person : `delete[]`
 
 Deletes the specified person, module or occasion from the address book. +
@@ -136,7 +139,7 @@ Deletes the 2nd person. +
 Deletes the 1st module. +
 * `deleteoccasion 5` +
 Deletes the 5th occasion.
-
+// end::delete[]
 === Listing entered commands : `history`
 
 Lists all the commands that you have entered in reverse chronological order. +
@@ -232,10 +235,11 @@ There is no need to save manually.
 === Autocomplete (coming in v 1.4)
 A feature that gives a list of potential matches based on substrings of a result that a user types into any other command.
 
-=== Import information from external platform: `import` (coming in v 2.0)
-A command to allow the user to see the history of commands used within the address book.+
-Command Syntax: `import [keyword]` +
-keyword: One of either: IVLE, NUSMODS, MYISIS.
+=== Import module information from external platform: `importmodule` (coming in v 2.0)
+A command to allow the user to import information from NUSMods.+
+
+Command Syntax: `importmodule [modulecode]` +
+If the specified module in the current semester is not found, it will be imported with information extracted from NUSMods.
 
 
 == FAQ
